OpenAPI implemented. Security refactored. Integration tests.